Avoid image stretch

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -177,12 +177,14 @@ nav svg {
 .hike-page .image-gallery {
   margin-top: 0;
   margin: 10px;
-  min-height: 60vh;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-auto-columns: 1fr;
   grid-gap: 10px;
   grid-auto-flow: dense;
+}
+.hike-page .image-gallery--only-map {
+  min-height: 60vh;
 }
 
 .hike-page .image-gallery > * {
